--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -136,3 +136,18 @@ p {
 .bold {
   font-family: "mb";
 }
+
+@media only screen and (max-width: 960px) {
+  h1 {
+    font-size: $h1Mobile;
+  }
+  h2 {
+    font-size: $h2Mobile;
+  }
+  h3 {
+    font-size: $h3Mobile;
+  }
+  p {
+    font-size: $pMobile;
+  }
+}
